[gd_scene load_steps=19 format=3 uid="uid://byo0wsmut2awi"]

[ext_resource type="Script" uid="uid://cpkkr2dlf0oww" path="res://Ship/ship.gd" id="1_q4ev1"]
[ext_resource type="Shader" uid="uid://bjptbwquh1pww" path="res://Ship/trail.gdshader" id="1_u0im0"]
[ext_resource type="Texture2D" uid="uid://dta8x6s13djgd" path="res://Res/characters and towns/ships.png" id="3_1w8ol"]
[ext_resource type="Texture2D" uid="uid://dq614idwdgse5" path="res://Res/characters and towns/flags.png" id="4_d6neq"]
[ext_resource type="Texture2D" uid="uid://e71cg1xkaxja" path="res://Res/characters and towns/carrack.png" id="5_d6neq"]
[ext_resource type="Texture2D" uid="uid://cmy7je7xgtoo5" path="res://Res/characters and towns/man o war.png" id="7_bpstu"]
[ext_resource type="Script" uid="uid://ckvfethajtyyt" path="res://Ship/cannons_left.gd" id="8_4ahkv"]
[ext_resource type="Texture2D" uid="uid://dc0xngrjitu06" path="res://Res/characters and towns/frigate.png" id="9_2mf0n"]
[ext_resource type="PackedScene" uid="uid://cer7jk55wmmog" path="res://Ship/cannon_ball.tscn" id="9_vy28l"]
[ext_resource type="AudioStream" uid="uid://b60odadw58jh8" path="res://Res/music and sound/sounds/powerful-cannon-shot-352459.mp3" id="11_f5jbu"]
[ext_resource type="AudioStream" uid="uid://drltgnsjplrja" path="res://Res/music and sound/sounds/cannon-explosion-39434.mp3" id="12_oy6rr"]
[ext_resource type="AudioStream" uid="uid://bvwabkq10wv3b" path="res://Res/music and sound/sounds/drowning-34415.wav" id="13_yum6n"]
[ext_resource type="AudioStream" uid="uid://cy0tmjj3hx8lw" path="res://Res/music and sound/sounds/coin-drop-229314.wav" id="14_308st"]
[ext_resource type="PackedScene" uid="uid://c7l2l6vkyxxmj" path="res://UI/health_bar.tscn" id="14_u0im0"]
[ext_resource type="AudioStream" uid="uid://ctfj3sfw6nphr" path="res://Res/music and sound/sounds/sail.wav" id="15_u0im0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_20xht"]
shader = ExtResource("1_u0im0")
shader_parameter/speed = 10.0
shader_parameter/transparency = 0.8

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q4ev1"]
size = Vector2(181, 129)

[sub_resource type="CircleShape2D" id="CircleShape2D_edrfk"]
radius = 79.24645

[node name="Ship" type="CharacterBody2D"]
material = SubResource("ShaderMaterial_20xht")
script = ExtResource("1_q4ev1")

[node name="nav_agent" type="NavigationAgent2D" parent="."]
simplify_path = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(9.5, -43.5)
shape = SubResource("RectangleShape2D_q4ev1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_edrfk")

[node name="Ships" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
position = Vector2(-4, -86)
texture = ExtResource("3_1w8ol")
hframes = 3

[node name="Flags" type="Sprite2D" parent="."]
visible = false
position = Vector2(-5, -88)
texture = ExtResource("4_d6neq")

[node name="ShotRadius" type="Sprite2D" parent="."]
position = Vector2(-2, 0)
rotation = 1.5707964

[node name="cannons left" type="Node2D" parent="ShotRadius"]
position = Vector2(-8.742278e-08, -2)
rotation = -1.5707964
script = ExtResource("8_4ahkv")
side = "left"

[node name="cannon ball" parent="ShotRadius/cannons left" instance=ExtResource("9_vy28l")]
position = Vector2(24, -15)
rotation = 3.1415927

[node name="cannon ball2" parent="ShotRadius/cannons left" instance=ExtResource("9_vy28l")]
position = Vector2(-12, -14)
rotation = 3.1415927

[node name="cannon ball3" parent="ShotRadius/cannons left" instance=ExtResource("9_vy28l")]
position = Vector2(-51, -15)
rotation = 3.1415927

[node name="cannons right" type="Node2D" parent="ShotRadius"]
position = Vector2(-8.742278e-08, -2)
rotation = -1.5707964
script = ExtResource("8_4ahkv")
side = "right"

[node name="cannon ball" parent="ShotRadius/cannons right" instance=ExtResource("9_vy28l")]
position = Vector2(23, 40)

[node name="cannon ball2" parent="ShotRadius/cannons right" instance=ExtResource("9_vy28l")]
position = Vector2(-13, 41)

[node name="cannon ball3" parent="ShotRadius/cannons right" instance=ExtResource("9_vy28l")]
position = Vector2(-52, 40)

[node name="Carrack" type="Sprite2D" parent="."]
visible = false
z_index = 2
texture = ExtResource("5_d6neq")
hframes = 20
vframes = 4

[node name="Frigate" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("9_2mf0n")
hframes = 20
vframes = 4

[node name="ManOWar" type="Sprite2D" parent="."]
visible = false
z_index = 2
texture = ExtResource("7_bpstu")
hframes = 20
vframes = 4

[node name="Combat_Timer" type="Timer" parent="."]
one_shot = true

[node name="Flee_Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Boarding_Timer" type="Timer" parent="."]
one_shot = true

[node name="Fire_Timer" type="Timer" parent="."]
one_shot = true

[node name="Knock_back_Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="cannon sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_f5jbu")
volume_db = -5.266
pitch_scale = 0.6

[node name="ship hit sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_oy6rr")
volume_db = -20.312
pitch_scale = 1.61

[node name="ship sunk sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_yum6n")

[node name="collection sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_308st")

[node name="sailing sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_u0im0")
volume_db = -13.165

[node name="health bar" parent="." instance=ExtResource("14_u0im0")]
offset_left = -79.0
offset_top = 41.0
offset_right = 72.0
offset_bottom = 68.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="Combat_Timer" to="." method="_on_combat_timer_timeout"]
[connection signal="timeout" from="Flee_Timer" to="." method="_on_flee_timer_timeout"]
[connection signal="timeout" from="Boarding_Timer" to="." method="_on_boarding_timer_timeout"]
[connection signal="timeout" from="Fire_Timer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="Knock_back_Timer" to="." method="_on_knock_back_timer_timeout"]
